force-app/main/default/src/objects/HealthCloudGA__CustomLabelConfig__c/HealthCloudGA__CustomLabelConfig__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Custom Label Config</label>
</CustomObject>