force-app/main/default/src/objects/HealthCloudGA__CustomLabelConfig__c/fields/HealthCloudGA__ObjectFieldName__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__ObjectFieldName__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Object Field Name</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>