force-app/main/default/src/objects/HealthCloudGA__CustomLabelConfig__c/fields/HealthCloudGA__ObjectName__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__ObjectName__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Object Type</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>