force-app/main/default/src/objects/HealthCloudGA__CustomLabelConfig__c/fields/HealthCloudGA__RelationshipName__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__RelationshipName__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Lookup Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>